don't show buy/sell all buttons when not needed (issue #49)
FossilOrigin-Name: 3953c83396909e1640991ef846ba6c8e4e51908777fb88421c1045661db0722e

--- a/bin/data/ui/game.glade
+++ b/bin/data/ui/game.glade
@@ -10953,7 +10953,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                                             </child>
                                             <child>
                                               <object class="GtkButton" id="btnbuyall">
-                                                <property name="label" translatable="yes">B_uy all</property>
+                                                <property name="label" translatable="yes">B_uy max</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="receives_default">True</property>
