--- a/bin/data/ui/help.glade
+++ b/bin/data/ui/help.glade
@@ -24,10 +24,6 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
   <!-- interface-license-type gplv3 -->
   <!-- interface-name Steam Sky -->
   <!-- interface-copyright 2018-2019 Bartek thindil Jasicki -->
-  <object class="GtkMenu" id="helpmenu">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-  </object>
   <object class="GtkTextTagTable" id="helptagtable">
     <child type="tag">
       <object class="GtkTextTag" id="underline">
@@ -146,28 +142,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="shadow_type">in</property>
-            <child>
-              <object class="GtkTextView" id="helpview">
-                <property name="name">normalfont</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="editable">False</property>
-                <property name="wrap_mode">word-char</property>
-                <property name="cursor_visible">False</property>
-                <property name="buffer">helpbuffer</property>
-                <property name="accepts_tab">False</property>
-                <signal name="button-press-event" handler="Disable_Mouse" swapped="no"/>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="resize">True</property>
-            <property name="shrink">True</property>
-          </packing>
+          <placeholder/>
         </child>
       </object>
     </child>
