--- a/bin/data/ui/help.glade
+++ b/bin/data/ui/help.glade
@@ -24,12 +24,6 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
   <!-- interface-license-type gplv3 -->
   <!-- interface-name Steam Sky -->
   <!-- interface-copyright 2018-2019 Bartek thindil Jasicki -->
-  <object class="GtkListStore" id="topicslist">
-    <columns>
-      <!-- column-name topic -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
   <object class="GtkWindow" id="helpwindow">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Steam Sky - Help</property>
@@ -64,30 +58,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                     <property name="expanded">True</property>
                     <signal name="activate" handler="Toggle_Topics" swapped="no"/>
                     <child>
-                      <object class="GtkTreeView" id="treetopics">
-                        <property name="name">normalfont</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="model">topicslist</property>
-                        <property name="headers_visible">False</property>
-                        <property name="enable_search">False</property>
-                        <signal name="cursor-changed" handler="Select_Topic" swapped="no"/>
-                        <child internal-child="selection">
-                          <object class="GtkTreeSelection"/>
-                        </child>
-                        <child>
-                          <object class="GtkTreeViewColumn">
-                            <property name="title" translatable="yes">column</property>
-                            <property name="sort_column_id">0</property>
-                            <child>
-                              <object class="GtkCellRendererText"/>
-                              <attributes>
-                                <attribute name="text">0</attribute>
-                              </attributes>
-                            </child>
-                          </object>
-                        </child>
-                      </object>
+                      <placeholder/>
                     </child>
                     <child type="label">
                       <object class="GtkLabel">
@@ -112,5 +83,11 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkListStore" id="topicslist">
+    <columns>
+      <!-- column-name topic -->
+      <column type="gchararray"/>
+    </columns>
   </object>
 </interface>
