--- a/bin/data/ui/debug.glade
+++ b/bin/data/ui/debug.glade
@@ -1201,6 +1201,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Owner of selected base</property>
+                        <signal name="changed" handler="Show_Bases_Types" swapped="no"/>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
