added better search in healing and repairing in bases
FossilOrigin-Name: 320bb9141f61d1a14b25e08657d7a14640ca4cd601c0aa6018ee892e61ca385b

--- a/bin/data/ui/game.glade
+++ b/bin/data/ui/game.glade
@@ -4365,6 +4365,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="model">itemssort</property>
+                                    <property name="enable_search">False</property>
                                     <property name="search_column">0</property>
                                     <signal name="cursor-changed" handler="Object_Selected" swapped="no"/>
                                     <signal name="focus-in-event" handler="Disable_Menu_Shortcuts" swapped="no"/>
@@ -4396,7 +4397,7 @@ along with Steam Sky.  If not, see <http://www.gnu.org/licenses/>.
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkScrolledWindow">
+                              <object class="GtkScrolledWindow" id="scrollbase">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="shadow_type">in</property>
